force-app/main/default/objects/tdc_cti__General_Setting__c/fields/tdc_cti__Call_Recording_Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Recording_Type__c</fullName>
    <label>Call Recording Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Channel</fullName>
                <default>true</default>
                <label>Single Channel</label>
            </value>
            <value>
                <fullName>Dual Channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>