force-app/main/default/objects/tdc_cti__General_Setting__c/fields/tdc_cti__Call_Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Call_Transfer_Type__c</fullName>
    <description>This field is used to control the call transfer type.</description>
    <label>Call Transfer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
                <default>true</default>
                <label>Cold</label>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>