force-app/main/default/objects/tdc_cti__General_Setting__c/fields/tdc_cti__CallerId_for_Auto_Forward__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__CallerId_for_Auto_Forward__c</fullName>
    <description>Control the number displayed on the destination device for a call forwarded via the Missed Call functionality.</description>
    <label>Missed Call - Routing # Display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Originating Number</fullName>
                <label>Customer Number</label>
            </value>
            <value>
                <fullName>My Number</fullName>
                <label>Salesforce/Marketing Number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>