force-app/main/default/objects/tdc_cti__General_Setting__c/fields/tdc_cti__Created_For__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Created_For__c</fullName>
    <label>Created For</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>