force-app/main/default/objects/tdc_cti__General_Setting__c/fields/tdc_cti__Dark_Hours_To__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Dark_Hours_To__c</fullName>
    <label>Dark Hours To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>