force-app/main/default/objects/tdc_cti__General_Setting__c/fields/tdc_cti__Enable_call_transfer__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Enable_call_transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable call transfer</label>
    <type>Checkbox</type>
</CustomField>