force-app/main/default/objects/tdc_cti__General_Setting__c/fields/tdc_cti__Incoming_Call_Queue_Route_Time__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Incoming_Call_Queue_Route_Time__c</fullName>
    <description>This field is used to store the incoming call routing time between queue users.</description>
    <label>Incoming Call Queue Route Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>