force-app/main/default/objects/tdc_cti__General_Setting__c/fields/tdc_cti__Minimize_SoftPhone__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Minimize_SoftPhone__c</fullName>
    <description>This field holds the value either yes or no where yes stands for minimize the softphone after incoming/outgoing call completion.</description>
    <inlineHelpText>This field holds the value either yes or no where yes stands for minimize the softphone after incoming/outgoing call completion.</inlineHelpText>
    <label>Minimize SoftPhone</label>
    <length>10</length>
    <type>Text</type>
</CustomField>