force-app/main/default/objects/tdc_cti__General_Setting__c/fields/tdc_cti__Missed_Call_Notification__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Missed_Call_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Missed Call Notification</label>
    <type>Checkbox</type>
</CustomField>