force-app/main/default/objects/tdc_cti__General_Setting__c/fields/tdc_cti__Options__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Options__c</fullName>
    <label>Options</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>