force-app/main/default/objects/tdc_cti__General_Setting__c/fields/tdc_cti__Out_Of_Office_Option__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Out_Of_Office_Option__c</fullName>
    <label>Out Of Office Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autoforward</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>