force-app/main/default/objects/tdc_cti__General_Setting__c/fields/tdc_cti__Selected_Task_Fields__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Selected_Task_Fields__c</fullName>
    <label>Selected Task Fields</label>
    <type>TextArea</type>
</CustomField>