force-app/main/default/objects/tdc_cti__General_Setting__c/fields/tdc_cti__Task_Schedular_Time__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Task_Schedular_Time__c</fullName>
    <description>This field contains information about after how many minutes the &apos;UpdateCTITask&apos; scheduler will run.</description>
    <label>Task Schedular Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>